--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.3",
-    "next": "14.1.4",
+    "next": "^14.2.2",
     "react": "^18",
     "react-dom": "^18"
   },
